[package]
name = "apis"
version = "0.1.1"
authors = ["Ken Sato <ksato9700@gmail.com>"]
edition = "2018"
build = "build.rs"

#[lib]
#name = "apis"
#path = "src/lib.rs"

[dependencies]
bytes = "0.4"
prost-twirp = "0.1.0"
prost = "0.3"
prost-derive = "0.3"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

[build-dependencies]
prost-build = "0.3"
prost-twirp = { version = "0.1.0", features = ["service-gen"] }
